--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+.wrapper{
+  display: grid;
+  grid-template-areas:
+  "header header"
+  "container container";
+  grid-template-rows: 60px 1fr;
+  grid-row-gap: 24px;
+  grid-column-gap: 24px;
+}
+.container{
+  display: grid;
+  grid-area: container;
+  padding: 0 100px;
+  grid-template-areas:
+  "navbar profile";
+  grid-column-gap: 24px;
+  grid-template-columns: 3fr 10fr;
+  @media (max-width: 1024px) {
+    padding: 0 16px;
+  }
+}
+
