--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -5,6 +5,10 @@
   text-align: center;
   padding: 16px;
   max-height: 368px;
+
+  .navbarLinkActive {
+    color: #dc4734;
+  }
   a{
     text-decoration: none;
     color: black;
@@ -12,6 +16,14 @@
       cursor: pointer;
       color: #dc4734 ;
     }
+  }
+  ul{
+    margin: 0;
+    padding: 0;
+    li{
+      list-style-type: none;
+    }
+
   }
 
 }
