feat: add upload profile img

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
     left: 0;
     box-shadow: 0 0 8px 1px rgb(0 0 0 / 20%);
     background: white;
+    z-index: 1;
 }
 .headerContainer{
     display: grid;
