--- a/src/components/Profile/UserInfo/UserInfo.module.scss
+++ b/src/components/Profile/UserInfo/UserInfo.module.scss
@@ -16,17 +16,13 @@
 }
 
 .userImg {
-  width: 100px;
-  height: 100px;
+  width: 100%;
 
+
+  border: 4px solid white;
+  border-radius: 50%;
 }
 
-.userBlock {
-  position: absolute;
-  top: 181px;
-  left: 25px;
-  max-width: 450px;
-}
 
 .userName {
   font-size: 20px;
@@ -35,4 +31,58 @@
 
 .userStatus {
   font-size: 18px;
+}
+
+.userBlock {
+  position: absolute;
+  top: 140px;
+  left: 25px;
+  max-width: 450px;
+}
+
+.userBlockImg {
+  position: relative;
+  width: 152px;
+  height: 152px;
+
+  &:hover {
+    .userImgOverload {
+      display: flex;
+    }
+  }
+}
+
+.userImgOverload {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(128, 128, 128, 0.5);
+  border-radius: 50%;
+  border: 4px solid white;
+  display: none;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.userImgLabel {
+  width: 100%;
+  height: 100%;
+
+  input {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.userImgLabelIco {
+  position: absolute;
+  top: 42%;
+  left: 42%;
+  img{
+    width: 30px;
+  }
 }
