--- a/src/components/Profile/UserInfo/UserInfo.module.scss
+++ b/src/components/Profile/UserInfo/UserInfo.module.scss
@@ -48,6 +48,7 @@
   &:hover {
     .userImgOverload {
       display: flex;
+      cursor: pointer;
     }
   }
 }
@@ -64,10 +65,10 @@
   display: none;
   justify-content: center;
   align-items: center;
-
 }
 
 .userImgLabel {
+  margin: unset;
   width: 100%;
   height: 100%;
 
@@ -75,6 +76,9 @@
     opacity: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer !important;
+    margin: unset;
+    padding: unset;
   }
 }
 
@@ -82,7 +86,29 @@
   position: absolute;
   top: 42%;
   left: 42%;
-  img{
+
+  img {
     width: 30px;
   }
+}
+.profileStatus{
+  position: absolute;
+  left: 207px;
+  bottom: -34px;
+  input {
+    margin: unset;
+    padding: 6px;
+  }
+}
+.userData{
+  margin: 68px 0 32px 16px;
+}
+.userDataItem{
+  padding: 4px 0;
+}
+.userDataContacts{
+  margin-left: 16px;
+}
+.editButton{
+  margin-bottom: 16px;
 }
