feat: add typescript

--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   padding: 8px 0;
+  align-items: center;
+  border-bottom: 1px dashed #80808042;
 }
 
 .userImg {
