feat: fix form styles, add colors and mixin files

--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -1,6 +1,8 @@
+@use "../../../styles/colors.module";
+
 .dialogItem{
   padding: 10px;
 }
 .dialogItemActive{
-  color: #dc4734;
+  color: colors.$main-orange;
 }
