--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -1,6 +1,7 @@
-.chat{
-padding-bottom: 100px;
+.chat {
+  padding-bottom: 100px;
 }
+
 .message {
   padding: 16px;
   background: white;
@@ -27,7 +28,7 @@ padding-bottom: 100px;
   padding-top: 16px;
 }
 
-.form {
+.formChat {
   background: white;
   position: fixed;
   height: 100px;
@@ -38,4 +39,16 @@ padding-bottom: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  width: 40%;
+
+  textarea {
+    height: unset;
+    margin-right: 16px;
+  }
 }
