fix: refactor class components to functional, fix profile status test

--- a/src/components/Profile/UserInfo/UserInfo.module.scss
+++ b/src/components/Profile/UserInfo/UserInfo.module.scss
@@ -91,24 +91,34 @@
     width: 30px;
   }
 }
-.profileStatus{
+
+.profileStatus {
   position: absolute;
   left: 207px;
   bottom: -34px;
+
   input {
     margin: unset;
     padding: 6px;
   }
 }
-.userData{
+.profileStatusPointer {
+  cursor: pointer;
+}
+
+.userData {
   margin: 68px 0 32px 16px;
 }
-.userDataItem{
+
+.userDataItem {
   padding: 4px 0;
 }
-.userDataContacts{
+
+.userDataContacts {
   margin-left: 16px;
 }
-.editButton{
+
+.editButton {
   margin-bottom: 16px;
 }
+
