--- a/src/App.scss
+++ b/src/App.scss
@@ -40,8 +40,8 @@
 .wrapper {
   display: grid;
   grid-template-areas:
-  "header header"
-  "container container";
+    'header header'
+    'container container';
   grid-template-rows: 60px 1fr;
   grid-row-gap: 24px;
   grid-column-gap: 24px;
@@ -51,8 +51,7 @@
   display: grid;
   grid-area: container;
   padding: 0 100px;
-  grid-template-areas:
-  "navbar content";
+  grid-template-areas: 'navbar content';
   grid-column-gap: 24px;
   grid-template-columns: 3fr 10fr;
   @media (max-width: 1024px) {
