--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,4 +1,4 @@
-@use "../../styles/colors.module";
+@use '../../styles/colors.module';
 
 .navbar {
   grid-area: navbar;
@@ -29,9 +29,7 @@
     li {
       list-style-type: none;
     }
-
   }
-
 }
 
 .navbarLink {
