--- a/src/styles/mixins.module.scss
+++ b/src/styles/mixins.module.scss
@@ -1,5 +1,8 @@
 @mixin activeForm($color, $borderWidth) {
-  &:hover, &:focus, &:active, &:focus-visible {
+  &:hover,
+  &:focus,
+  &:active,
+  &:focus-visible {
     border: $borderWidth solid $color;
     outline: none;
   }
